--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/File/Download.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/File/Download.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/File/Download/{id}/{versionid}/{automated}"
+﻿@page "/File/Download/{id}/{versionid}/{automated}/{linkid}/{linkType}"
 @model PanacheSoftware.UI.Client.Blazor.Pages.File.DownloadModel
 @{
 }
