--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
@@ -20,6 +20,7 @@
                 {
                     <Badge Color="Color.Primary" Class="float-right">@LanguageHelper.GetTitle(langQueryList, 10928)</Badge>
                 }
+                <CascadingValue Value="langQueryList"><CascadingValue Value="userListModel"><DocAutoTaskModal taskHead=@taskHead /></CascadingValue></CascadingValue>
             </CardTitle>
         </CardHeader>
         <CardBody>
