Added a history view for custom field group values that have history enabled.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -191,6 +191,8 @@
         textCodes.Add(10230);
         textCodes.Add(10231);
         textCodes.Add(10232);
+        textCodes.Add(10233);
+        textCodes.Add(10234);
         textCodes.Add(10302);
         textCodes.Add(10306);
         textCodes.Add(10900);
