Added an APIAccess page to provide easy access to swagger URIs for all microservices.  This isn't something that should be rolled into a production environment.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
@@ -93,6 +93,7 @@
         textCodes.Add(10127);
         textCodes.Add(10128);
         textCodes.Add(10129);
+        textCodes.Add(10130);
 
         langQueryList = await MyFoundationService.GetLanguageInfo(TokenProvider.AccessToken, UserAppCache.LanguageCode, textCodes.ToArray());
     }
