--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
@@ -14,6 +14,9 @@
             <BarDropdownItem To="usersettings">
                 @LanguageHelper.GetTitle(langQueryList, 10122)
             </BarDropdownItem>
+            <BarDropdownItem To="apiaccess/">
+                @LanguageHelper.GetTitle(langQueryList, 10130)
+            </BarDropdownItem>
         </BarDropdownMenu>
     </BarDropdown>
 </BarItem>
