Fixed issue where incorrect shortname was used when creating tasks from a template which would lead to a duplicate name error.
Prevent task group id being added to document automation tag for custom field groups attached to the parent task.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
@@ -496,7 +496,7 @@
 
                 if(chosenTemplate != null)
                 {
-                    taskGroupHead.Description = chosenTemplate.Description;
+                    taskGroupHead.Description = chosenTemplate.TemplateDetail.Description;
                 }
 
                 //var taskGroupHead = await GetTaskGroupSummary(newId);
